# bybit-ws-trade

./: .gitignore  Makefile  README.md  pyproject.toml
bybit_websocket/: bybit_ws.py  connect.py
bybit_websocket/db/: crud.py  database.py  models.py  schemas.py
bybit_websocket/utils/: __init__.py  cusmom_exceptions.py  depends.py
visualize/: candle.py  session.py
